# muq

./: .gitignore  CHANGELOG.md  LICENSE  LICENSE-SPEC  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: dump_midi.py
spec/: muq-spec.md  muq.schema.json
spec/examples/: ableton_drum_rack.muq  articulations.muq  automation.muq  drums.muq  dynamics.muq  full.muq  full_song.muq  groove.muq  lofi.muq  meter_changes.muq  minimal.muq  numeric_durations.muq  odd_time.muq  pattern_reuse.muq  percussion_flag.muq  pickup.muq  polyrhythm.muq  scale_mode.muq  swing.muq  tempo_events.muq  text_events.muq  thirty_second_notes.muq  tie_across.muq  timing_layers.muq  voice_ties.muq  waltz.muq
spec/invalid/: bad_duration.muq  beat_overflow.muq  duration_conflict.muq  missing_song.muq  rest_conflict.muq
src/muq/: __init__.py  cli.py  fmt.py  gm.py  ir.py  midi.py  model.py  muq.schema.json  parser.py  resolve.py  theory.py  validate.py
tests/: test_muq.py
tests/midi_verify/: test_aftertouch.muq  test_articulations.muq  test_basic_drums.muq  test_basic_melody.muq  test_cc_automation.muq  test_cc_linear_interp.muq  test_chords.muq  test_custom_drum_map.muq  test_dur_beats.muq  test_durations.muq  test_empty_bars.muq  test_global_drum_map.muq  test_meter_events.muq  test_mixed_mode.muq  test_multi_track.muq  test_offset_beats.muq  test_pattern_loop.muq  test_pattern_reuse.muq  test_pickup.muq  test_pitch_bend.muq  test_repeat.muq  test_section_repeat_multipattern.muq  test_swing.muq  test_tempo_events.muq  test_tempo_time.muq  test_text_events.muq  test_ties.muq  (+2 more)
